--- a/docs/parsing.adoc
+++ b/docs/parsing.adoc
@@ -43,11 +43,11 @@ For go-getoptions that data structure is defined as a double linked tree with a 
 
 [source, go]
 ----
-type CLITree struct {
+type ProgramTree struct {
 	Type     argType
 	Name     string
-	Children []*CLITree
-	Parent   *CLITree
+	Children []*ProgramTree
+	Parent   *ProgramTree
 }
 ----
 
@@ -67,85 +67,7 @@ Once the tree is built, the parser can walk through the tree as it walks through
 
 Additionally, since there is a data structure that is walked at the same time as CLI arguments are parsed, the parser can suggest next level completions (by listing the children) to the shell completion system.
 
-An example tree can be found in the tests:
-
-This definition:
-
-[source, go]
-----
-	opt := New()
-	opt.String("opt1", "")
-
-	cmd1 := opt.NewCommand("cmd1", "")
-	cmd1.String("cmd1opt1", "")
-	cmd2 := opt.NewCommand("cmd2", "")
-	cmd2.String("cmd2opt1", "")
-
-	sub1cmd1 := cmd1.NewCommand("sub1cmd1", "")
-	sub1cmd1.String("sub1cmd1opt1", "")
-----
-
-Generates this tree (printed with go-spew):
-
-[source, go]
-----
-(*getoptions.CLITree)({
-	Type: (getoptions.argType) 0,
-	Name: (string) (len=47) "/tmp/go-build2358722863/b001/go-getoptions.test",
-	Children: ([]*getoptions.CLITree) (len=3) {
-		(*getoptions.CLITree)({
-			Type: (getoptions.argType) 2,
-			Name: (string) (len=4) "opt1",
-			Children: ([]*getoptions.CLITree) {
-			},
-			Parent: (*getoptions.CLITree)(<already shown>)
-		}),
-		(*getoptions.CLITree)({
-			Type: (getoptions.argType) 1,
-			Name: (string) (len=4) "cmd1",
-			Children: ([]*getoptions.CLITree) (len=2) {
-				(*getoptions.CLITree)({
-					Type: (getoptions.argType) 2,
-					Name: (string) (len=8) "cmd1opt1",
-					Children: ([]*getoptions.CLITree) {
-					},
-					Parent: (*getoptions.CLITree)(<already shown>)
-				}),
-				(*getoptions.CLITree)({
-					Type: (getoptions.argType) 1,
-					Name: (string) (len=8) "sub1cmd1",
-					Children: ([]*getoptions.CLITree) (len=1) {
-						(*getoptions.CLITree)({
-							Type: (getoptions.argType) 2,
-							Name: (string) (len=12) "sub1cmd1opt1",
-							Children: ([]*getoptions.CLITree) {
-							},
-							Parent: (*getoptions.CLITree)(<already shown>)
-						})
-					},
-					Parent: (*getoptions.CLITree)(<already shown>)
-				})
-			},
-			Parent: (*getoptions.CLITree)(<already shown>)
-		}),
-		(*getoptions.CLITree)({
-			Type: (getoptions.argType) 1,
-			Name: (string) (len=4) "cmd2",
-			Children: ([]*getoptions.CLITree) (len=1) {
-				(*getoptions.CLITree)({
-					Type: (getoptions.argType) 2,
-					Name: (string) (len=8) "cmd2opt1",
-					Children: ([]*getoptions.CLITree) {
-					},
-					Parent: (*getoptions.CLITree)(<already shown>)
-				})
-			},
-			Parent: (*getoptions.CLITree)(<already shown>)
-		})
-	},
-	Parent: (*getoptions.CLITree)(<nil>)
-})
-----
+An example tree can be found in the tests.
 
 === CLI Arguments Tree
 
@@ -181,6 +103,48 @@ type optionPair struct {
 	// We allow multiple args in case of splitting on comma.
 	Args []string
 }
+
+== Current parsing
+
+Currently options are parsed in the call to `Parse` and commands are handled in the call to `Dispatch`.
+All CLI arguments are parsed and options are matched regardless of order (unless `SetRequireOrder`).
+Unmatched options and commands are kept in the remaining array (Set `opt.SetUnknownMode(Pass)`) and they are parsed on the call to `Dispatch` or a subsequent `Parse` call.
+This is a very flexible approach but it breaks with completion.
+
+While option parsing can be done at stages with correct results and great flexibility, completions need to know the entire tree for them to suggest the correct subset of valid options.
+Not maintaining two tree walking solutions is the motivation for this refactor.
+
+The new parsing procedure works like this:
+
+On setup, when setting options and commands (calls to opt.String, opt.StringVar and opt.NewCommand for example), the ProgramTree is built.
+
+The ProgramTree build copies the options set at the current level into its children.
+In that way, each child has a complete set of options it supports at every level.
+The copy is done by passing a pointer so if an option is set at a higher level the results will trickle down to the children.
+
+The parsing does two passes, the first pass is only looking for commands though it does parse options only to know wether or not they require an argument.
+
+== Edge cases
+
+=== Passing options out of order
+
+For a definition like the following:
+
+[source, yaml]
+----
+program:
+	- --opt1
+	- cmd1:
+		- --cmd1opt1
+	- cmd2:
+		- --cmd2opt1
+----
+
+Caling the program as: `program --cmd1opt1 cmd1 --opt1`
+Has the options out of order.
+This should be allowed by default and only be disallowed when `SetRequireOrder` is set.
+
+One way to accomplish this is to pass the options to the child when calling `NewCommand`, in this way the actual validation of options can happen at a single level.
 
 
 == What I want
