--- a/docs/parsing.adoc
+++ b/docs/parsing.adoc
@@ -122,7 +122,6 @@ The ProgramTree build copies the options set at the current level into its child
 In that way, each child has a complete set of options it supports at every level.
 The copy is done by passing a pointer so if an option is set at a higher level the results will trickle down to the children.
 
-The parsing does two passes, the first pass is only looking for commands though it does parse options only to know wether or not they require an argument.
 
 == Edge cases
 
@@ -156,6 +155,11 @@ One way to accomplish this is to pass the options to the child when calling `New
 use `program --opt arg1 --opt command --opt arg3` instead.
 
 * optionals have lower precedence than command.
+
+=== Text input before command
+
+Not allowed, too ambiguous and it can mask errors that lead to just bad UI.
+
 
 == What I want
 
